feat: aislamiento por organizacion, WhatsApp multi-tenant y datos del administrador
- Aislamiento estricto entre organizaciones: membresias por org, validacion de miembros, abonos y fotos, verificacion del token en cada request.
- Notificaciones WhatsApp por organizacion: config y token cifrado por org, cola de envio inmediato con reintentos, catalogo de plantillas.
- Datos del administrador y celular de la organizacion al crear la org.
- Migracion V14 aditiva. Se elimina el webhook de WhatsApp sin uso.